# ncro

./: .envrc  Cargo.toml  README.md  config.example.toml  flake.nix  go.mod  go.sum
.cargo/: config.toml
.github/workflows/: release.yaml  rust.yaml
cmd/ncro/: main.go
crates/config/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/discovery/src/: lib.rs
crates/health/src/: lib.rs
crates/narinfo/: Cargo.toml
crates/narinfo/src/: lib.rs
crates/router/src/: lib.rs
crates/s3/: Cargo.toml
crates/server/src/: lib.rs
docs/: architecture.md  install.md
internal/cache/: db.go  db_test.go
internal/config/: config.go  config_test.go
internal/discovery/: discovery.go
internal/mesh/: gossip.go  gossip_test.go  mesh.go  mesh_test.go
internal/narinfo/: narinfo.go  narinfo_test.go
internal/prober/: prober.go  prober_test.go
internal/router/: router.go  router_test.go
internal/server/: integration_test.go  server.go  server_test.go
ncro/: Cargo.toml
ncro/src/: cli.rs
nix/: module.nix  package.nix  shell.nix
nix/tests/: e2e.nix  s3.nix  socket-activation.nix
